@@ -6,6 +6,16 @@
 
                                   Changelog
 
+Kamil Dudka (20 Jul 2009)
+- Claes Jakobsson improved the support for client certificates handling
+  in NSS-powered libcurl. Now the client certificates can be selected
+  automatically by a NSS built-in hook. Additionally pre-login to all PKCS11
+  slots is no more performed. It used to cause problems with HW tokens.
+
+- Fixed reference counting for NSS client certificates. Now the PEM reader
+  module should be always properly unloaded on Curl_nss_cleanup(). If the unload
+  fails though, libcurl will try to reuse the already loaded instance.
+
 Daniel Fandrich (15 Jul 2009)
 - Added nonblock.c to the non-automake makefiles (note that the dependencies
   in the Watcom makefiles aren't quite correct).
